--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.1.17",
     "zod": "^4.1.13"
